# AgentDoctor

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.zh-CN.md  bug_audit.md  mkdocs.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: bug-reviewer.toml  codebase-mapper.toml  contract-generator.toml  doc-gardener.toml  docs-inventory-agent.toml  evaluator.toml  feature-generator.toml  feature-inventory-agent.toml  handoff-writer.toml  harness-planner.toml  test-inventory-agent.toml
.github/workflows/: ci.yml  docs.yml
contract2agent/: README.md  __init__.py  baseline.py  cli.py  diagnosis.py  diagnostic_modes.py
contract2agent/cost_estimate/: auto_plan.py  commands.py  loader.py  report.py  suggestions.py
contract2agent/evaluation/: README.md  __init__.py  capability_classifier.py  classifier.py  data.py  evidence.py  (+8 more)
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  CODEMAP.md  GOLDEN_PRINCIPLES.md  PROJECT_CONTEXT.md  auto.md  baselines.md  cli.md  configuration.md  deep.md  demo.md  development.md  examples.md  failure-taxonomy.md  getting-started.md  index.html  index.md  patch-preview.md  playground.md  quick.md  reports.md  time-cost.md  triage.md
examples/: README.md
tests/: README.md  conftest.py  test_agent_evaluation_framework.py  test_baseline.py  test_contract2agent.py  test_cost_estimate.py  test_diagnosis_schema.py  test_diagnostic_modes.py  test_docs_site.py  test_failure_taxonomy.py  test_file_reading_eval.py  test_file_reading_llm_judge.py  test_golden_diagnosis.py  test_patch_preview.py  test_report_rendering.py  test_triage.py
(+96 files in other folders)
