[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract2agent"
version = "0.1.0"
description = "Evaluation-first diagnosis, scoring, and cautious prediction for AI agent profiles."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Contract2Agent Contributors" }
]
dependencies = [
  "typer>=0.9",
  "pydantic>=1.10",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<9.7",
  "pymdown-extensions>=10.0"
]

[project.scripts]
c2a = "contract2agent.cli:main"
# Legacy alias retained to avoid breaking existing local installs.
agentdoctor = "contract2agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contract2agent*"]

[tool.setuptools.package-data]
contract2agent = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
